Add questions API layer
