# openapi/schema.yaml
@@ -8,9 +8,9 @@ paths:
     get:
       operationId: auth_me_retrieve
       tags:
-        - auth
+      - auth
       security:
-        - jwtAuth: []
+      - jwtAuth: []
       responses:
         '200':
           content:
@@ -22,7 +22,7 @@ paths:
     post:
       operationId: auth_register_create
       tags:
-        - auth
+      - auth
       requestBody:
         content:
           application/json:
@@ -36,8 +36,8 @@ paths:
               $ref: '#/components/schemas/Register'
         required: true
       security:
-        - jwtAuth: []
-        - {}
+      - jwtAuth: []
+      - {}
       responses:
         '201':
           content:
@@ -52,7 +52,7 @@ paths:
         Takes a set of user credentials and returns an access and refresh JSON web
         token pair to prove the authentication of those credentials.
       tags:
-        - auth
+      - auth
       requestBody:
         content:
           application/json:
@@ -79,7 +79,7 @@ paths:
         Takes a refresh type JSON web token and returns an access type JSON web
         token if the refresh token is valid.
       tags:
-        - auth
+      - auth
       requestBody:
         content:
           application/json:
@@ -99,8 +99,420 @@ paths:
               schema:
                 $ref: '#/components/schemas/TokenRefresh'
           description: ''
+  /api/questions/:
+    get:
+      operationId: questions_list
+      tags:
+      - questions
+      security:
+      - jwtAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/QuestionList'
+          description: ''
+    post:
+      operationId: questions_create
+      tags:
+      - questions
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/QuestionCreate'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/QuestionCreate'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/QuestionCreate'
+        required: true
+      security:
+      - jwtAuth: []
+      responses:
+        '201':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/QuestionCreate'
+          description: ''
+  /api/questions/{id}/:
+    get:
+      operationId: questions_retrieve
+      parameters:
+      - in: path
+        name: id
+        schema:
+          type: integer
+        required: true
+      tags:
+      - questions
+      security:
+      - jwtAuth: []
+      - {}
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/QuestionDetail'
+          description: ''
+  /api/questions/{id}/respond/:
+    post:
+      operationId: questions_respond_create
+      parameters:
+      - in: path
+        name: id
+        schema:
+          type: integer
+        required: true
+      tags:
+      - questions
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/QuestionRespond'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/QuestionRespond'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/QuestionRespond'
+      security:
+      - jwtAuth: []
+      responses:
+        '201':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/QuestionRespond'
+          description: ''
+  /api/questions/{id}/results/:
+    get:
+      operationId: questions_results_retrieve
+      parameters:
+      - in: path
+        name: id
+        schema:
+          type: integer
+        required: true
+      tags:
+      - questions
+      security:
+      - jwtAuth: []
+      - {}
+      responses:
+        '200':
+          description: No response body
+  /api/questions/my/:
+    get:
+      operationId: questions_my_list
+      tags:
+      - questions
+      security:
+      - jwtAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/QuestionList'
+          description: ''
+  /api/schema/:
+    get:
+      operationId: schema_retrieve
+      description: |-
+        OpenApi3 schema for this API. Format can be selected via content negotiation.
+
+        - YAML: application/vnd.oai.openapi
+        - JSON: application/vnd.oai.openapi+json
+      parameters:
+      - in: query
+        name: format
+        schema:
+          type: string
+          enum:
+          - json
+          - yaml
+      - in: query
+        name: lang
+        schema:
+          type: string
+          enum:
+          - af
+          - ar
+          - ar-dz
+          - ast
+          - az
+          - be
+          - bg
+          - bn
+          - br
+          - bs
+          - ca
+          - ckb
+          - cs
+          - cy
+          - da
+          - de
+          - dsb
+          - el
+          - en
+          - en-au
+          - en-gb
+          - eo
+          - es
+          - es-ar
+          - es-co
+          - es-mx
+          - es-ni
+          - es-ve
+          - et
+          - eu
+          - fa
+          - fi
+          - fr
+          - fy
+          - ga
+          - gd
+          - gl
+          - he
+          - hi
+          - hr
+          - hsb
+          - ht
+          - hu
+          - hy
+          - ia
+          - id
+          - ig
+          - io
+          - is
+          - it
+          - ja
+          - ka
+          - kab
+          - kk
+          - km
+          - kn
+          - ko
+          - ky
+          - lb
+          - lt
+          - lv
+          - mk
+          - ml
+          - mn
+          - mr
+          - ms
+          - my
+          - nb
+          - ne
+          - nl
+          - nn
+          - os
+          - pa
+          - pl
+          - pt
+          - pt-br
+          - ro
+          - ru
+          - sk
+          - sl
+          - sq
+          - sr
+          - sr-latn
+          - sv
+          - sw
+          - ta
+          - te
+          - tg
+          - th
+          - tk
+          - tr
+          - tt
+          - udm
+          - ug
+          - uk
+          - ur
+          - uz
+          - vi
+          - zh-hans
+          - zh-hant
+      tags:
+      - schema
+      security:
+      - jwtAuth: []
+      - {}
+      responses:
+        '200':
+          content:
+            application/vnd.oai.openapi:
+              schema:
+                type: object
+                additionalProperties: {}
+            application/yaml:
+              schema:
+                type: object
+                additionalProperties: {}
+            application/vnd.oai.openapi+json:
+              schema:
+                type: object
+                additionalProperties: {}
+            application/json:
+              schema:
+                type: object
+                additionalProperties: {}
+          description: ''
 components:
   schemas:
+    ChoiceTypeEnum:
+      enum:
+      - single
+      - multiple
+      type: string
+      description: |-
+        * `single` - Single choice
+        * `multiple` - Multiple choice
+    QuestionCreate:
+      type: object
+      properties:
+        id:
+          type: integer
+          readOnly: true
+        title:
+          type: string
+          maxLength: 255
+        description:
+          type: string
+        choice_type:
+          $ref: '#/components/schemas/ChoiceTypeEnum'
+        allow_custom_answer:
+          type: boolean
+        options:
+          type: array
+          items:
+            $ref: '#/components/schemas/QuestionOption'
+      required:
+      - id
+      - options
+      - title
+    QuestionDetail:
+      type: object
+      properties:
+        id:
+          type: integer
+          readOnly: true
+        author:
+          type: string
+          readOnly: true
+        title:
+          type: string
+          maxLength: 255
+        description:
+          type: string
+        choice_type:
+          $ref: '#/components/schemas/ChoiceTypeEnum'
+        allow_custom_answer:
+          type: boolean
+        is_active:
+          type: boolean
+        options:
+          type: array
+          items:
+            $ref: '#/components/schemas/QuestionOption'
+          readOnly: true
+        created_at:
+          type: string
+          format: date-time
+          readOnly: true
+        updated_at:
+          type: string
+          format: date-time
+          readOnly: true
+      required:
+      - author
+      - created_at
+      - id
+      - options
+      - title
+      - updated_at
+    QuestionList:
+      type: object
+      properties:
+        id:
+          type: integer
+          readOnly: true
+        author:
+          type: string
+          readOnly: true
+        title:
+          type: string
+          maxLength: 255
+        description:
+          type: string
+        choice_type:
+          $ref: '#/components/schemas/ChoiceTypeEnum'
+        allow_custom_answer:
+          type: boolean
+        is_active:
+          type: boolean
+        options_count:
+          type: integer
+          readOnly: true
+        responses_count:
+          type: integer
+          readOnly: true
+        options:
+          type: array
+          items:
+            $ref: '#/components/schemas/QuestionOption'
+          readOnly: true
+        created_at:
+          type: string
+          format: date-time
+          readOnly: true
+        updated_at:
+          type: string
+          format: date-time
+          readOnly: true
+      required:
+      - author
+      - created_at
+      - id
+      - options
+      - options_count
+      - responses_count
+      - title
+      - updated_at
+    QuestionOption:
+      type: object
+      properties:
+        id:
+          type: integer
+          readOnly: true
+        text:
+          type: string
+          maxLength: 255
+      required:
+      - id
+      - text
+    QuestionRespond:
+      type: object
+      properties:
+        option_ids:
+          type: array
+          items:
+            type: integer
+        custom_answer_text:
+          type: string
     Register:
       type: object
       properties:
@@ -121,11 +533,11 @@ components:
           type: string
           writeOnly: true
       required:
-        - email
-        - id
-        - password
-        - password_confirm
-        - username
+      - email
+      - id
+      - password
+      - password_confirm
+      - username
     TokenObtainPair:
       type: object
       properties:
@@ -142,10 +554,10 @@ components:
           type: string
           readOnly: true
       required:
-        - access
-        - email
-        - password
-        - refresh
+      - access
+      - email
+      - password
+      - refresh
     TokenRefresh:
       type: object
       properties:
@@ -156,8 +568,8 @@ components:
           type: string
           writeOnly: true
       required:
-        - access
-        - refresh
+      - access
+      - refresh
     User:
       type: object
       properties:
@@ -187,13 +599,13 @@ components:
           format: date-time
           readOnly: true
       required:
-        - created_at
-        - date_joined
-        - email
-        - id
-        - is_email_verified
-        - updated_at
-        - username
+      - created_at
+      - date_joined
+      - email
+      - id
+      - is_email_verified
+      - updated_at
+      - username
   securitySchemes:
     jwtAuth:
       type: http
